--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 body {
     font-family: sans-serif;
     max-width: 900px;
+    margin: 0 auto;
+}
+
+.container {
+    max-width: 980px;
     margin: 0 auto;
 }
 
@@ -16,53 +22,64 @@ header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
-}
-
-.title{
-    margin-top: 20px;	
     
-    .description {
-        font-size: 11px;
-        color: rgba(0, 0, 0, 0.516);	
+    .title{
+        margin-top: 20px;	
+        
+        .description {
+            font-size: 11px;
+            color: rgba(0, 0, 0, 0.516);	
+        }
     }
-}
-
-/*Button on monthly and off yearly*/
-
-.button-on-off{
-    display: flex;
-}
-
-.button{
-    font-size: 12px;
-    margin: 1.5rem;
     
-    .border-none{
-        border: none;
-        background-color: white;
-        font-size: 20px;
+    /*Button on Monthly and off Yearly*/
+    
+    .button-on-off{
+        display: flex;
     }
-
-    .on, .off{
-        font-size: 20px;
+    
+    .button{
+        font-size: 12px;
+        margin: 1.5rem;
+        
+        .border-none{
+            border: none;
+            background-color: white;
+            font-size: 20px;
+        }
+    
+        .on, .off{
+            font-size: 20px;
+        }
     }
 }
 
 /*/Header*/
 
-.card-basic{
+main{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.card{
+    flex-shrink: 1;
+    flex-grow: 1;
     padding: 2.2rem;
-    width: 30%;
     background-color: #FEFEFE;
     border-radius: 1rem;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.522);
 
     .rgba{
         font-size: 12px;
         color: rgba(0, 0, 0, 0.516);	
     }
 
+    /*/Title card*/
+
     .main-card{
         text-align: center;
+
         
         .value{
             padding: 10px;
@@ -72,6 +89,7 @@ header {
                 font-weight: 700;
             }
         }
+        
         
         .yearly{
             font-size: 12px;
@@ -84,17 +102,12 @@ header {
             padding: 5px;
         }
 
-        .choose-plan{
-            border: none;
-            background-color: #FEFEFE;
-            padding: 15px 0;
-        }
-
         .butt-plan{
             border: none;
             background-color: #6500FF;
             color:white;
-            padding: 15px 55px;
+            margin: 15px 0;
+            padding: 15px 50px;
             border-radius: 10px;
         }
 
@@ -111,3 +124,18 @@ header {
 }
 
 /*/Card Basic*/
+
+.card-professional{
+    background-color: #6500FF;
+}
+
+.btn-white{
+    border: none;
+    background-color:#FEFEFE;
+    color:#6500FF;
+    margin: 15px 0;
+    padding: 15px 50px;
+    border-radius: 10px;
+}
+
+/*/Card Professional*/
